# resurgo

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CMakePresets.json
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt
app/src/: main.cpp
assets/images/: Sprite-0001.ase  Sprite-0002.aseprite  attempt1.ase  legs.ase  player.aseprite
assets/save/: storage.save
assets/shaders/: default.frag  default.vert  depth_shader.vert  old.frag  outline.frag  terrain.frag  terrain.vert  text.frag  text.vert
ext/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/resurgo/: animation.hpp  app.hpp  resource_loader.hpp  resources.hpp  state_manager.hpp
lib/include/resurgo/animations/: wave_text.hpp
lib/include/resurgo/engine/: camera.hpp  dynamic_geometry.hpp  floatrect.hpp  font.hpp  game_object.hpp  geometry.hpp  input.hpp  material.hpp  renderer.hpp  resources.hpp  shader.hpp  shadow_map.hpp  text.hpp  texture.hpp  transform.hpp  vertex.hpp
lib/include/resurgo/engine/shapes/: cube.hpp  quad.hpp
lib/include/resurgo/game/: chunk.hpp  chunk_manager.hpp  cursor.hpp  dimetric.hpp  entrypoint.hpp  gameplay.hpp  player.hpp  state_manager.hpp  tile.hpp
lib/include/resurgo/gameplay/: chunk.hpp  chunk_loader.hpp  chunk_manager.hpp  entity.hpp  iso_transform.hpp  item.hpp  player.hpp  scene.hpp  settings.hpp  storage.hpp  tile.hpp  tile_cursor.hpp  world.hpp
lib/include/resurgo/gameplay/UI/: materials.hpp
lib/include/resurgo/states/: entrypoint.hpp  gameplay.hpp
lib/include/resurgo/utils/: color.hpp  gl_handle.hpp  perlin_noise.hpp
lib/src/: app.cpp  build_version.hpp.in
lib/src/animations/: wave_text.cpp
lib/src/engine/: dynamic_geometry.cpp  font.cpp  geometry.cpp  input.cpp  renderer.cpp  shader.cpp  shadow_map.cpp  text.cpp  texture.cpp
lib/src/game/: chunk.cpp  chunk_manager.cpp  cursor.cpp  entrypoint.cpp  gameplay.cpp  player.cpp
lib/src/gameplay/: chunk.cpp  chunk_loader.cpp  chunk_manager.cpp  player.cpp  scene.cpp  storage.cpp  tile_cursor.cpp  world.cpp
lib/src/gameplay/UI/: materials.cpp
lib/src/states/: Entrypoint.cpp  entrypoint.cpp  gameplay.cpp
